@@ -9,6 +9,12 @@
 	(R_igraph_measure_dynamics_citedcat_id_age)
 	(R_igraph_measure_dynamics_citedcat_id_age_st) : added
 
+	* interfaces/R/igraph/R/measure.dynamics.R 
+	(measure.dynamics.citingcat.id.age) : added
+	* interfaces/R/src/rinterface.c
+	(R_igraph_measure_dynamics_citingcat_id_age)
+	(R_igraph_measure_dynamics_citingcat_id_age_st) : added
+	
 2006-06-03  Gabor Csardi  <csardi@kzoo.edu>
 
 	* interfaces/R/igraph/R/games.R (aging.prefatt.game) : rewritten
